add 屏蔽 特殊标签

--- a/src/content.scss
+++ b/src/content.scss
@@ -444,6 +444,7 @@
 
   [data-utags_list_node*=",hide,"],
   [data-utags_list_node*=",隐藏,"],
+  [data-utags_list_node*=",屏蔽,"],
   [data-utags_list_node*=",不再显示,"],
   [data-utags_list_node*=",block,"] {
     opacity: 5%;
