fix(linux.do): 如果列表最后一个是被隐藏的，强制显示出来，使其自动加载分页内容

--- a/src/sites/z001/027-discourse.scss
+++ b/src/sites/z001/027-discourse.scss
@@ -306,4 +306,9 @@
       }
     }
   }
+
+  /* 主题列表最后一个需要显示， */
+  [data-utags_list_node]:last-of-type {
+    display: var(--utags-list-node-display) !important;
+  }
 }
