feat(v2ex): enable browsing content tagging

--- a/src/content.scss
+++ b/src/content.scss
@@ -523,7 +523,7 @@
 
 [data-utags_display-effect-of-the-visited-content="4"]
   [data-utags_list_node*=",:visited,"] {
-  .main-link a.title {
+  [data-utags_condition_node][data-utags_visited="1"] {
     color: var(--utags-visited-title-color);
   }
 }
