--- a/src/sites/z001/027-discourse.scss
+++ b/src/sites/z001/027-discourse.scss
@@ -2,21 +2,21 @@
   /* default */
   a + {
     .utags_ul_0 {
-      /* right-top */
-      object-position: 100% 0%;
+      /* right-center */
+      object-position: 200% 50%;
       --utags-notag-ul-disply: var(--utags-notag-ul-disply-5);
       --utags-notag-ul-height: var(--utags-notag-ul-height-5);
       --utags-notag-ul-position: var(--utags-notag-ul-position-5);
       --utags-notag-ul-top: var(--utags-notag-ul-top-5);
-      --utags-notag-captain-tag-top: -2px;
-      --utags-notag-captain-tag-left: 18px;
+      --utags-notag-captain-tag-top: var(--utags-notag-captain-tag-top-5);
+      --utags-notag-captain-tag-left: var(--utags-notag-captain-tag-left-5);
       --utags-captain-tag-background-color: var(
         --utags-captain-tag-background-color-overlap
       );
     }
     .utags_ul_1 {
       /* left-bottom */
-      object-position: 0% 100%;
+      object-position: 0% 200%;
     }
   }
 
@@ -25,13 +25,8 @@
     --utags-list-node-display: table-row;
 
     .main-link a.title + {
-      .utags_ul_0 {
-        --utags-notag-captain-tag-top: 12px;
-        --utags-notag-captain-tag-left: 0px;
-      }
-
       .utags_ul_1 {
-        margin-bottom: 2px !important;
+        margin-bottom: 4px !important;
       }
     }
     .discourse-tag + {
@@ -44,16 +39,15 @@
     }
     .posters a:first-of-type + {
       .utags_ul_0 {
-        --utags-notag-captain-tag-top: 22px;
-        --utags-notag-captain-tag-left: 0px;
+        object-position: 0% 200%;
+        --utags-notag-captain-tag-left: -6px;
       }
 
       .utags_ul_1 {
         position: absolute;
         top: -9999px;
-        z-index: 100;
-        margin-top: 16px !important;
-        margin-left: 3px !important;
+        margin-top: 4px !important;
+        margin-left: -2px !important;
       }
     }
   }
@@ -61,15 +55,10 @@
   /* topoic detail page header */
   header {
     .header-title a.topic-link + {
-      .utags_ul_0 {
-        --utags-notag-captain-tag-top: -4px;
-      }
-
       .utags_ul_1 {
         object-position: 100% 200%;
         position: absolute;
         top: -9999px;
-        z-index: 100;
         margin-bottom: 4px !important;
       }
     }
@@ -90,13 +79,8 @@
   /* topoic detail page content */
   #topic-title {
     a.fancy-title + {
-      .utags_ul_0 {
-        --utags-notag-captain-tag-top: -8px;
-        --utags-notag-captain-tag-left: -18px;
-      }
-
       .utags_ul_1 {
-        margin-bottom: 6px !important;
+        margin-bottom: 8px !important;
       }
     }
     .discourse-tag + {
@@ -106,57 +90,62 @@
     }
   }
 
-  .topic-body .names a + {
-    .utags_ul_1 {
-      position: absolute;
-      top: -9999px;
-      z-index: 100;
-      margin-top: 12px !important;
+  .topic-body .topic-meta-data .names {
+    &[data-utags_fit_content="1"] {
+      /* width: fit-content !important; */
+      max-width: max-content !important;
+
+      *:not(svg) {
+        width: fit-content !important;
+      }
+    }
+
+    a + {
+      .utags_ul_1 {
+        object-position: 0% 200%;
+        position: absolute;
+        top: -9999px;
+        z-index: 100;
+      }
     }
   }
 
   /* user-card */
-  .user-card .user-profile-link {
+  .user-card .names {
     &[data-utags_fit_content="1"] {
-      display: inline-block !important;
-      width: fit-content !important;
+      max-width: max-content !important;
+      max-height: max-content !important;
+    }
 
-      *:not(svg) {
-        width: fit-content !important;
+    a.user-profile-link + {
+      .utags_ul_0 {
+        object-position: 200% 0%;
+        margin-top: 6px !important;
+      }
+      .utags_ul_1 {
+        object-position: 0% 200%;
+        position: absolute;
+        top: -9999px;
+        margin-left: 16px !important;
       }
     }
   }
 
   /* https://discourse.org/categories */
   .column .category-list .category-title-link {
-    &[data-utags_fit_content="1"] {
-      display: inline-block !important;
-      width: fit-content !important;
-
-      *:not(svg, img) {
-        width: fit-content !important;
-      }
-    }
-
     + {
       .utags_ul_1 {
-        object-position: 200% 0%;
+        object-position: 200% 50%;
         position: absolute;
         top: -9999px;
-        z-index: 100;
-        margin-top: 14px !important;
       }
     }
   }
   .column .latest-topic-list {
     .main-link {
       .title + {
-        .utags_ul_0 {
-          --utags-notag-captain-tag-top: 12px;
-        }
-
         .utags_ul_1 {
-          margin-bottom: 2px !important;
+          margin-bottom: 4px !important;
         }
       }
       .badge-category__wrapper + {
@@ -225,7 +214,7 @@
     }
   }
 
-  /* https://linux.do/u/nickname/summary */
+  /* https://linux.do/u/neo/summary */
   .user-info .user-detail .name-line a {
     &[data-utags_fit_content="1"] {
       display: inline-block !important;
@@ -237,30 +226,25 @@
     }
   }
 
-  /* https://linux.do/u/nickname/activity/bookmarks */
+  /* https://linux.do/u/neo/activity/bookmarks */
   .bookmark-list.topic-list tr {
-    .main-link .title + {
-      .utags_ul_0 {
-        --utags-notag-captain-tag-top: 0px;
-        --utags-notag-captain-tag-left: 0px;
-      }
-    }
     a.avatar + {
       .utags_ul_0 {
-        --utags-notag-captain-tag-top: 26px;
-        --utags-notag-captain-tag-left: 0px;
+        object-position: 0% 200%;
+        --utags-notag-captain-tag-top: 6px;
       }
       .utags_ul_1 {
         position: absolute;
         top: -9999px;
-        margin-top: 24px !important;
-        margin-left: 4px !important;
+        margin-top: 10px !important;
       }
     }
   }
 
-  /* https://linux.do/u/nickname/activity/reactions */
-  .user-content .user-stream-item__header {
+  /* https://linux.do/u/neo/activity/reactions */
+  .user-content .user-stream-item__header,
+  /* https://linux.do/u/neo/activity/likes-given */
+  .user-content .filter-1 .post-list-item .post-list-item__header {
     a.avatar-link + {
       .utags_ul_0 {
         object-position: 0% 200%;
@@ -272,25 +256,6 @@
         position: absolute;
         top: -9999px;
         margin-top: 2px !important;
-        margin-left: 0px !important;
-      }
-    }
-
-    a.badge-category__wrapper {
-      &[data-utags_fit_content="1"] {
-        display: inline-block !important;
-        width: fit-content !important;
-
-        *:not(svg) {
-          width: fit-content !important;
-        }
-      }
-
-      & + .utags_ul_1 {
-        object-position: 200% 0%;
-        position: absolute;
-        top: -9999px;
-        margin-top: 4px !important;
         margin-left: 0px !important;
       }
     }
