--- a/src/sites/z001/032-flarum.scss
+++ b/src/sites/z001/032-flarum.scss
@@ -1,6 +1,6 @@
 :not(#a):not(#b):not(#c) {
   /* default */
-  a + {
+  * + {
     .utags_ul_0 {
       /* right-center */
       object-position: 200% 50%;
