--- a/src/content.scss
+++ b/src/content.scss
@@ -19,7 +19,8 @@
   .utags_ul {
     box-sizing: border-box !important;
     display: inline-flex !important;
-    flex-wrap: wrap;
+    flex-direction: row !important;
+    flex-wrap: wrap !important;
     align-content: flex-start;
     justify-content: flex-start;
     overflow: visible;
