--- a/src/sites/z001/011-facebook.com.scss
+++ b/src/sites/z001/011-facebook.com.scss
@@ -1,13 +1,14 @@
 :not(#a):not(#b):not(#c) {
   /* default */
-  a[data-utags_position] + {
+  a[data-utags_flag="username_with_avatar"] + {
     .utags_ul_0 {
+      object-position: 0% 100%;
       --utags-notag-ul-disply: var(--utags-notag-ul-disply-5);
       --utags-notag-ul-height: var(--utags-notag-ul-height-5);
       --utags-notag-ul-position: var(--utags-notag-ul-position-5);
       --utags-notag-ul-top: var(--utags-notag-ul-top-5);
-      --utags-notag-captain-tag-top: 2px;
-      --utags-notag-captain-tag-left: 22px;
+      --utags-notag-captain-tag-top: -2px;
+      --utags-notag-captain-tag-left: 0px;
       --utags-captain-tag-background-color: var(
         --utags-captain-tag-background-color-overlap
       );
