--- a/src/sites/z001/018-xiaohongshu.com.scss
+++ b/src/sites/z001/018-xiaohongshu.com.scss
@@ -2,6 +2,7 @@
   /* default */
   a + {
     .utags_ul_0 {
+      object-position: 0% 100%;
       --utags-notag-ul-disply: var(--utags-notag-ul-disply-5);
       --utags-notag-ul-height: var(--utags-notag-ul-height-5);
       --utags-notag-ul-position: var(--utags-notag-ul-position-5);
@@ -13,6 +14,7 @@
       );
     }
     .utags_ul_1 {
+      object-position: 0% 100%;
       background-color: var(--utags-captain-tag-background-color) !important;
       border-radius: 3px !important;
     }
@@ -50,16 +52,14 @@
   }
 
   /* 评论区 */
-  .comments-container .author-wrapper .name + {
-    .utags_ul_0 {
-      --utags-notag-captain-tag-top: 2px;
-      --utags-notag-captain-tag-left: 16px;
-    }
-    .utags_ul_1 {
-      position: absolute;
-      top: -9999px;
-      margin-top: -18px !important;
-      margin-left: 0px !important;
+  .comments-container .author-wrapper .author {
+    align-items: flex-start;
+    flex-direction: column;
+
+    .name + {
+      .utags_ul_0 {
+        object-position: 200% 50%;
+      }
     }
   }
 
@@ -114,20 +114,20 @@
   }
 
   /* 主页 */
-  #userPageContainer .user-info .user-name + {
-    .utags_ul_0 {
-      --utags-notag-ul-disply: var(--utags-notag-ul-disply-5);
-      --utags-notag-ul-height: var(--utags-notag-ul-height-5);
-      --utags-notag-ul-position: var(--utags-notag-ul-position-5);
-      --utags-notag-ul-top: var(--utags-notag-ul-top-5);
-      --utags-notag-captain-tag-top: -16px;
-      --utags-notag-captain-tag-left: -6px;
-    }
-    .utags_ul_1 {
-      position: absolute;
-      top: -9999px;
-      margin-top: -15px !important;
-      margin-left: -4px !important;
+  #userPageContainer .user-info .user-nickname {
+    align-items: flex-start;
+    flex-direction: column;
+
+    .user-name + {
+      .utags_ul_0 {
+        object-position: 0% 200%;
+        --utags-notag-ul-disply: var(--utags-notag-ul-disply-5);
+        --utags-notag-ul-height: var(--utags-notag-ul-height-5);
+        --utags-notag-ul-position: var(--utags-notag-ul-position-5);
+        --utags-notag-ul-top: var(--utags-notag-ul-top-5);
+        --utags-notag-captain-tag-top: 0px;
+        --utags-notag-captain-tag-left: 0px;
+      }
     }
   }
 }
