fix: mp.weixin.qq.com issue (#29)

--- a/src/content.scss
+++ b/src/content.scss
@@ -5,9 +5,12 @@
 :not(#utags_should_has_higher_specificity):not(
     #utags_should_has_higher_specificity
   ) {
-  /* fix mp.weixin.qq.com issue */
-  [data-utags_key] {
-    display: none !important;
+  /* fix mp.weixin.qq.com issue. https://github.com/utags/utags/issues/29 */
+  ul,
+  ol {
+    &:not(.utags_ul)[data-utags_key] {
+      display: none !important;
+    }
   }
 
   &[data-utags="off"] {
